@@ -19,7 +19,7 @@
  * You should have received a copy of the GNU General Public License
  * along with "prooftree". If not, see <http://www.gnu.org/licenses/>.
  * 
- * $Id: input.ml,v 1.23 2011/12/08 15:47:12 tews Exp $
+ * $Id: input.ml,v 1.24 2011/12/25 21:10:45 tews Exp $
  *)
 
 
@@ -381,135 +381,10 @@ let get_string len continuation_fn =
   let (s, n) = init_string len in
   get_string_cont s n len continuation_fn ()
 
-(*****************************************************************************
- *****************************************************************************)
-(** {3 Coq existential info parser} *)
-(*****************************************************************************
- *****************************************************************************)
-
-
-(* (dependent evars:)
- * (dependent evars: ?35 open, ?36 using ?42 ?41 , ?42 open,) 
- * (dependent evars: ?35 open, ?36 using ?42 ?41 , ?42 using ,)
- *)
-
-(** This function parses one evar uid without the question mark. *)
-let coq_parse_evar_without_question scan_buf =
-  Scanf.bscanf scan_buf " %[0-9] " (fun evar -> evar)
-
-
-(** This function parses the dependency list that follows ``using'',
-    looking like
-
-    [ ?42 ?41 ,]
-
-    [ ,]
-
-    When the final comma is encountered the now completely parsed evar
-    group is appended to the accumulated results and
-    {!coq_parse_next_evar_info} is called as continuation.
-*)
-let rec coq_parse_evar_dependency scan_buf uninst inst evar deps =
-  Scanf.bscanf scan_buf " %c " (function
-    | ',' ->
-      coq_parse_next_evar_info scan_buf 
-	uninst ((evar, List.rev deps) :: inst) ()
-    | '?' ->
-      let dep = coq_parse_evar_without_question scan_buf in
-      coq_parse_evar_dependency scan_buf uninst inst evar (dep :: deps)
-    | c ->
-      raise (Scanf.Scan_failure
-	       (Printf.sprintf
-		  ("expected an evar (starting with '?') or ',' "
-		   ^^ "for the end of the dependency list; but found '%c'")
-		  c))
-  )
-
-(** This function parses one evar group, looking like
-
-    [?35 open,]
-
-    [?36 using ?42 ?41 ,]
-
-    [?42 using ,]
-
-    When finished {!coq_parse_next_evar_info} is invoked on the
-    updated accumulated results.
-*)
-and coq_parse_one_evar_info scan_buf uninst inst =
-  let evar = coq_parse_evar_without_question scan_buf in
-  Scanf.bscanf scan_buf " %[^, ]" (function
-    | "open" ->
-      Scanf.bscanf scan_buf ", " 
-	(coq_parse_next_evar_info scan_buf (evar :: uninst) inst) ()
-    | "using" ->
-      coq_parse_evar_dependency scan_buf uninst inst evar []
-    | x ->
-      raise (Scanf.Scan_failure 
-	       (Printf.sprintf
-		  "expected \"open\" or \"using\" but found \"%s\"" x))
-  )
-  
-
-(** This function decides whether to continue parsing with reading the
-    next evar group or whether the end of evar information has been
-    reached. In the latter case the accumulated results are returned. 
-*)
-and coq_parse_next_evar_info scan_buf uninst inst () =
-  Scanf.bscanf scan_buf "%c" (function 
-    | '?' -> coq_parse_one_evar_info scan_buf uninst inst
-    | ')' -> (List.rev uninst, List.rev inst)
-    | c ->
-      raise (Scanf.Scan_failure
-	       (Printf.sprintf
-		  ("expected an evar (starting with '?') or " 
-		   ^^ "the end of the evar info (a ')'); but found '%c'")
-		  c))
-  )
-
-
-(** Parse the information display for existential variables of Coq.
-    This information can look like one of the folling lines:
-
-    [(dependent evars:)]
-
-    [(dependent evars: ?35 open, ?36 using ?42 ?41 , ?42 open,) ]
-
-    [(dependent evars: ?35 open, ?36 using ?42 ?41 , ?42 using ,)]
-
-    This function returns a tuple, where the first element is the list
-    of open, uninstantiated existential variables. The second element
-    is a list of pairs, where each pair contains an instantiated
-    existential variable and the list of variables that are used in its
-    instantiation.
-
-    If parsing dies with an exception, a suitable error dialog is 
-    displayed.
-*)
-let coq_parse_existential_info ex_string =
-  let scan_buf = Scanf.Scanning.from_string ex_string in
-  try
-    Scanf.bscanf scan_buf "(dependent evars: " 
-      (coq_parse_next_evar_info scan_buf [] []) ()
-  with
-    | Scanf.Scan_failure msg ->
-      error_message_dialog 
-	(Printf.sprintf 
-	   ("Coq existential variable info parsing error!\n" 
-	    ^^ "The parser died on the input\n  %s\n"
-	    ^^ "with an exception Scan_failure with message\n%s")
-	   ex_string msg)
-    | End_of_file ->
-      error_message_dialog
-	(Printf.sprintf
-	   ("Coq existential variable info parsing error!\n" 
-	    ^^ "The parser died on the input\n  %s\n"
-	    ^^ "with an End_of_file exception.")
-	   ex_string)
-    | _ -> assert false
 
 
 (******************************************************************************
+ ******************************************************************************
  * current-goals state %d current-sequent %s {cheated|not-cheated} \
  * proof-name-bytes %d command-bytes %d sequent-text-bytes %d \
  * additional-id-bytes %d existential-bytes %d\n\
@@ -559,7 +434,8 @@ let parse_current_goals_finish state current_sequent_id cheated_string
   let additional_ids_string = chop_final_newlines additional_ids_string in
   let additional_ids = string_split ' ' additional_ids_string in
   let existentials_string = chop_final_newlines existentials_string in
-  let (ex_uninst, ex_inst) = coq_parse_existential_info existentials_string in
+  let (ex_uninst, ex_inst) = 
+    Coq.coq_parse_existential_info existentials_string in
   current_parser := !read_command_line_parser;
   Proof_tree.process_current_goals state proof_name proof_command cheated_flag
     current_sequent_id current_sequent_text additional_ids ex_uninst ex_inst
