@@ -1,3 +1,7 @@
+2011-12-25  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* put coq specific code into coq.ml
+
 2011-12-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* new option -help-dialog
